--- a/package.json
+++ b/package.json
@@ -23,10 +23,7 @@
     "lodash": "^4.16.6",
     "moment": "^2.16.0",
     "needle": "^2.2.4",
-    "xlsx": "^0.15.1"
+    "xlsx": "^0.17.4"
   },
-  "devDependencies": {
-    "mqtt": "^3.0.0",
-    "node-schedule": "^1.3.2"
-  }
+  "devDependencies": {}
 }
